log
Fri Mar 26 19:30:23 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
test.c: In function ‘createList’:
list.c:33:14: error: ‘lista’ is used uninitialized in this function [-Werror=uninitialized]
   lista->head=NULL;
              ^
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:32:25 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
7d89a2f
Fri Mar 26 19:32:41 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0a1ba34
Fri Mar 26 19:33:27 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
abf424f
Fri Mar 26 19:36:16 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f1d4e14
Fri Mar 26 19:56:03 UTC 2021: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
fbfdcee
Fri Mar 26 20:00:31 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
50411b7
Fri Mar 26 20:01:17 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2530710
Fri Mar 26 20:05:30 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
aa97629
